# agentd

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agentd.toml
.agent/memory/episodic/: README.md  postmortem-template.md
.agent/memory/procedural/: README.md
.agent/memory/semantic/: README.md  codebase-overview.md  domain-models.md  provider-contracts.md  runtime-contracts.md  sqlite-schema.md
.agent/roles/: README.md  runtime-platform-engineer.md  rust-orchestrator.md  security-permissions-architect.md  technical-documentation-writer.md
.agent/system/: alignment.md  auto-learning.md  orchestrator.md
docs/: TODO.md  blueprints.md
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
src/adapters/: mod.rs
src/app/: runtime_executor.rs
src/domain/: agent.rs  audit_log.rs  capability.rs  mod.rs  permission.rs  plan.rs  process_handle.rs  resource_limit.rs  runtime_audit.rs  runtime_config.rs  runtime_session.rs  schedule.rs
src/ports/: mod.rs  policy.rs  process.rs  provider.rs  resource.rs  runtime.rs  securable.rs  store.rs  versioning.rs  workspace_guard.rs
tests/: attach_policy_tests.rs  audit_filter_tests.rs  cli_audit_filters_tests.rs  cli_error_output_tests.rs  cli_flow_tests.rs  cli_provider_stream_tests.rs  cli_rbac_tests.rs  cli_versioning_tests.rs  plan_parsing_tests.rs  policy_engine_tests.rs  runtime_config_tests.rs  runtime_executor_tests.rs  runtime_session_model_tests.rs  runtime_store_tests.rs  sandbox_provider_tests.rs  scheduler_tests.rs  state_store_tests.rs  versioning_adapter_tests.rs  workspace_guard_tests.rs
(+28 files in other folders)
